front-envoy.yaml
node:
  id: node-test1
  cluster: mycluster
static_resources:
  listeners:
  - name: envoy-status
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 6973
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: ingress_http_local_envoy-status
          http_filters:
          - name: envoy.router
          route_config:
            virtual_hosts:
            - name: local_envoy-status_vhost
              domains:
              - "*"
              routes:
              - match:
                  regex: "/(clusters|listeners|certs|config_dump|runtime|server_info|stats)"
                route:
                  cluster: envoy_admin
                  timeout: 10s
              - match:
                  regex: "/"
                direct_response:
                  status: 200
                  body:
                    filename: /etc/status-index.txt
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service/error"
                route:
                  cluster: dora
                  retry_policy:
                    retry_on: "5xx"
                    num_retries: 5
              - match:
                  prefix: "/service/dora/kramer"
                route:
                  cluster: dora
                  metadata_match:
                    filter_metadata:
                      envoy.lb:
                        owner: 'kramer'
              - match:
                  prefix: "/service/dora/newman"
                route:
                  cluster: dora
                  metadata_match:
                    filter_metadata:
                      envoy.lb:
                        owner: 'newman'
              - match:
                  prefix: "/service/dora"
                route:
                  cluster: dora
          http_filters:
          - name: envoy.filters.http.header_to_metadata
            config:
              request_rules:
              - header: namespace
                on_header_present:
                  metadata_namespace: envoy.lb
                  key: owner
                  type: STRING
                remove: false
          - name: envoy.router
            config: {}
  clusters:
  - name: dora
    type: EDS
    connect_timeout: 0.25s
    lb_policy: LEAST_REQUEST
    lb_subset_config:
      fallback_policy: DEFAULT_SUBSET
      default_subset:
        owner: PUBLIC
      subset_selectors:
      - keys:
        - owner
    http2_protocol_options: {}
    eds_cluster_config:
      eds_config:
        path: '/etc/xds.eds.yaml'
  - name: envoy_admin
    type: STATIC
    connect_timeout: 0.2s
    lb_policy: "ROUND_ROBIN"
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8001

admin:
  access_log_path: "/var/log/envoy-access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
