service-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            name: "envoy.file_access_log"
            config:
              path: "/var/log/envoy-filter.log"
              format: "%DOWNSTREAM_LOCAL_ADDRESS% [%START_TIME(%Y/%b/%dT%H:%M:%S.000Z)%] %REQ(X-ENVOY-DOWNSTREAM-SERVICE-CLUSTER)%/%REQ(X-ENVOY-DOWNSTREAM-SERVICE-NODE)% %UPSTREAM_CLUSTER%/%UPSTREAM_HOST% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%/%DURATION% %BYTES_RECEIVED% %BYTES_SENT% %RESPONSE_CODE% %RESPONSE_FLAGS% \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\"\n"
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: local_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
admin:
  access_log_path: "/var/log/envoy-access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
